# ocl_examples

./: BasicCompute11.hlsl  CMakeLists.txt  README.md  main.cpp  ocl_examples.sln  ocl_examples.vcxproj  ocl_examples.vcxproj.filters  ocl_hist.cpp  ocl_hist.h  ocl_radix_sort.cpp  ocl_radix_sort.h  ocl_radix_sort2.cpp  ocl_radix_sort2.h  ocl_stream_compact.cpp  ocl_stream_compact.h  ocl_test.cpp  ocl_test.h  yuv.cpp  yuv.h
data/: article.cl  calc.cl  downsample.cl  hist.cl  radix_sort.cl  radix_sort2.cl  reduce.cl  stream_compact.cl
docs/: index.html
examples/: example1_reduce.cpp  example1_reduce.h  example_article.cpp  example_article.h
